Fix layout issues in Home Page HTML and enhance product section styles in CSS

--- a/css/Home-page.css
+++ b/css/Home-page.css
@@ -20,7 +20,7 @@
 }
 .header-section ol{
     display: flex;
-    justify-content: start;;
+    justify-content: start;
 }
 .header-section .overlay{
     position: absolute;
@@ -75,3 +75,17 @@
     }
 
 /*end main section */
+
+/* start product section */
+.showmore{
+    margin-bottom: 50px;
+}
+.showmore button{
+    padding: 15px 40px;
+    border: 2px solid black;
+    background-color: transparent;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+/* end product section */
